--- a/album_3/styles.css
+++ b/album_3/styles.css
@@ -1,16 +1,16 @@
 @font-face {
   font-family: 'Sf Pro Display Regular';
-  src: url('fonts/SFPRODISPLAYREGULAR.OTF') format('truetype')
+  src: url('../fonts/SFPRODISPLAYREGULAR.OTF') format('truetype')
 }
 
 @font-face {
   font-family: 'Sf Pro Display Medium';
-  src: url('fonts/SFPRODISPLAYMEDIUM.OTF') format('truetype')
+  src: url('../fonts/SFPRODISPLAYMEDIUM.OTF') format('truetype')
 }
 
 @font-face {
   font-family: 'Sf Pro Display Bold';
-  src: url('fonts/SFPRODISPLAYBOLD.OTF') format('truetype')
+  src: url('../fonts/SFPRODISPLAYBOLD.OTF') format('truetype')
 }
 
 :root {
